I fixed the last two article to be aligned in a two columns

--- a/responsive-news-site/webroot/css/footer.css
+++ b/responsive-news-site/webroot/css/footer.css
@@ -58,3 +58,6 @@ body > footer a {
   justify-content: space-between;
   max-width: 8.5rem;
 }
+@media (min-width: 768px) {
+
+}
